--- a/p1/Makefile
+++ b/p1/Makefile
@@ -1,6 +1,6 @@
 FLAGS = -std=c++14 -Wall -Wextra -g -Wno-sign-compare
 
-all: p1 p2
+all: p1 p2 p3
 
 p1:
 	g++ program1.cpp -o program1 $(FLAGS)
@@ -12,5 +12,10 @@ p2:
 	./program2 ./filex.txt ./filey.txt ./output2.txt
 	cat ./output2.txt
 
+p3:
+	g++ program3.cpp -o program3 $(FLAGS)
+	./program3 ./filex.txt ./filey.txt ./output3.txt
+	cat ./output3.txt
+
 clean:
-	rm program1 program2
+	rm program1 program2 program3
