--- a/p1/Makefile
+++ b/p1/Makefile
@@ -2,16 +2,18 @@ FLAGS = -std=c++14 -Wall -Wextra -pedantic -g
 
 all: p1 p2 p3
 
-p1:
+.PHONY: p1 p2 p3 run outputs clean
+
+p1: src/program1.cpp
 	g++ src/program1.cpp -o program1 $(FLAGS)
 
-p2:
+p2: src/program2.cpp
 	g++ src/program2.cpp -o program2 $(FLAGS)
 
-p3:
+p3: src/program3.cpp
 	g++ src/program3.cpp -o program3 $(FLAGS)
 
-run:
+run: p1 p2 p3
 	./program1 ./filex.txt ./filey.txt ./output1.txt
 	./program2 ./filex.txt ./filey.txt ./output2.txt
 	./program3 ./filex.txt ./filey.txt ./output3.txt
@@ -24,4 +26,4 @@ outputs: run
 clean:
 	rm -f program1 program2 program3
 	rm -f output1.txt output2.txt output3.txt
-	rm -rf *.dSYM
+	rm -rf *.dSYM #Mac Only
