--- a/p2/Makefile
+++ b/p2/Makefile
@@ -2,14 +2,10 @@ FLAGS = -std=c++14 -Wall -Wextra -pedantic -g
 
 all: p1
 
-.PHONY: p1 p2 p3 debug_run clean
+.PHONY: p1 clean
 
-p1: src/BestFirstSearch.cpp src/main.cpp
-	g++ src/BestFirstSearch.cpp src/main.cpp -o BestFirstSearch $(FLAGS)
-
-
-debug_run: p1
-
+p1: src/BestFirstTreeSearch.cpp src/main.cpp
+	g++ src/BestFirstTreeSearch.cpp src/main.cpp -o BestFirstTreeSearch $(FLAGS)
 
 clean:
-	rm -f BestFirstSearch
+	rm -rf BestFirstTreeSearch *.dSYM
